ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/CnP_PaaS__Embeded_Virtual_Terminal__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Embedded Virtual Terminal</label>
    <nameField>
        <displayFormat>eVT-{0000}</displayFormat>
        <label>Embedded Virtual Terminal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P Embedded Virtual Terminal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>