ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Base_URL__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Base_URL__c</fullName>
    <label>Base URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>