ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Click_Pledge_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Click_Pledge_Account_Id__c</fullName>
    <label>Click &amp; Pledge Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>