ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact_Role__c</fullName>
    <label>Contact Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>