ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_at_aid__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_at_aid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>One-to-Many Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Embedded_Virtual_Terminal</relationshipName>
    <type>Lookup</type>
</CustomField>