ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_at_ca__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_at_ca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One-to-One Account</label>
    <type>Checkbox</type>
</CustomField>