ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_cr_uc__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_cr_uc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Contact</label>
    <type>Checkbox</type>
</CustomField>