ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_os_at__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_os_at__c</fullName>
    <label>Authorized Transactions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>