ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_os_co__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_os_co__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>