ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_os_cp__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_os_cp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Product for each new Opportunity</label>
    <type>Checkbox</type>
</CustomField>