ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_os_cr__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_os_cr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Role for  Each Opportunity</label>
    <type>Checkbox</type>
</CustomField>