ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__cs_os_pos__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__cs_os_pos__c</fullName>
    <label>Purchase Order Transactions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>