ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Form_CSS__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Form_CSS__c</fullName>
    <label>Form CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>