ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Identification_Number__c</fullName>
    <label>Identification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>