ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Invoice_PO__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Invoice_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice PO</label>
    <type>Checkbox</type>
</CustomField>