ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Organization_Information__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Organization_Information__c</fullName>
    <label>Organization Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>