ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Page_Name__c</fullName>
    <label>Page Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>