ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Payment_Declined__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Payment_Declined__c</fullName>
    <label>Payment Declined</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>