ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Receipt_Header__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Receipt_Header__c</fullName>
    <label>Receipt Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>