ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Terms_Conditions_Text__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Terms_Conditions_Text__c</fullName>
    <label>Terms &amp; Conditions Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>