ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Thank_you__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Thank_you__c</fullName>
    <label>Thank you</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>