ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/fields/CnP_PaaS__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Version_Number__c</fullName>
    <label>Version Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>