ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Embeded_Virtual_Terminal__c/listViews/CnP_PaaS__All.listView-meta.xml
<ListView>
    <fullName>CnP_PaaS__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>